--- a/service/package.json
+++ b/service/package.json
@@ -1,11 +1,20 @@
 {
+  "name": "service",
+  "version": "1.0.0",
+  "main": "Api.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
   "dependencies": {
-    "body-parser": "^1.20.2",
+    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
-    "express": "^4.19.2",
+    "express": "^4.21.0",
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
-    "mysql": "^2.18.1",
-    "type": "module"
+    "mysql": "^2.18.1"
   }
 }
